# ai-engineering

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  get_reviews.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: Dockerfile  app.py
apps/api/src/api/agents/: retrieval_generation.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/api/src/api/core/: config.py
data/: Mustafa-Resume.docx  meta_Appliances_2022_2023_no_category.jsonl  ~WRL0003.tmp
notebooks/warmup/: 01-llm-apis.ipynb
notebooks/week_1/: RAG_preprocessing_amazon.ipynb  amazon_dataset.ipynb  rag_pipeline.ipynb
