[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "ipykernel>=7.0.1",
    "openai>=2.5.0",
    "python-dotenv>=1.2.2",
]
