[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "cohere>=7.0.5",
    "dotenv>=0.9.9",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "ipykernel>=7.0.1",
    "openai>=2.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
